[gd_scene load_steps=3 format=2]

[ext_resource path="res://Choice.gd" type="Script" id=1]
[ext_resource path="res://Choice.jpg" type="Texture" id=2]

[node name="Choice" type="Node2D"]
script = ExtResource( 1 )

[node name="Choice" type="Sprite" parent="."]
position = Vector2( 512.546, 304.295 )
scale = Vector2( 0.500432, 0.445327 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Emily" type="TextureButton" parent="."]
margin_left = 298.632
margin_top = 370.421
margin_right = 433.632
margin_bottom = 530.421

[node name="Micheal" type="TextureButton" parent="."]
margin_left = 558.0
margin_top = 446.0
margin_right = 692.0
margin_bottom = 603.0

[node name="Robert" type="TextureButton" parent="."]
margin_left = 702.0
margin_top = 384.0
margin_right = 839.0
margin_bottom = 546.0
[connection signal="pressed" from="Emily" to="." method="_on_Emily_pressed"]
[connection signal="pressed" from="Micheal" to="." method="_on_Micheal_pressed"]
[connection signal="pressed" from="Robert" to="." method="_on_Robert_pressed"]
